# lilac

./: .darklua.json  .gitignore  .luarc.json  C_ffi.lua  Cargo.toml  README.md  _start.lua  libc.lua  processed_helloworld.c  simplest.c  simplest.lua  simplest.proc.lua  test_alloc.lua  tlld
sample/: input.c  input2.c  input2.lua  input2.tl  input3.c  input4.c  input4.lua  input4.tl  test_lua_interop.c  tlld
sample/cc_test/: Makefile
sample/cc_test/src/: lib.c  main.c
src/: main.rs
