[package]
name = "lilac2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
clio = { version = "0.3.4", features = ["clap-parse"] }
lang-c = "0.15.1"
